# functionali

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  main.yml
docs/: conf.py  experimental.rst  functionali.rst  higher-order-functions.rst  index.rst  modules.rst  predicates.rst  seq-transform.rst  seq-traverse.rst
docs/source/: functionali.rst
functionali/: __init__.py  dict_functions.py  experimental.py  function_transform.py  higher_order_functions.py  operators.py  predicates.py  seq_transform.py  seq_traverse.py  statements.py
pyfunc/: dict_functions.py  function_transform.py  predicates.py  seq_transform.py  seq_traverse.py  statements.py
tests/: test_dict_functions.py  test_experimental.py  test_function_transform.py  test_higher_order_functions.py  test_predicates.py  test_seq_transform.py  test_seq_traverse.py  test_statements.py
