[tool.poetry]
name = "pyfunc"
version = "0.1.0"
description = ""
authors = ["Abhinav Omprakash"]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
Sphinx = "^4.0.2"
black = "*"
blacken-docs = "^*"
pretty-timeit = "^0.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
