[tool.poetry]
name = "functionali"
version = "0.1.0"
description = "Functional programming tools for python. Putting the fun in functional programming 😉"
authors = ["Abhinav Omprakash"]
license="BSD-3-Clause"
readme="README.md"
homepage="https://functionali.readthedocs.io/en/latest/"
repository="https://github.com/AbhinavOmprakash/functionali"
keywords=["functional programming", "fp", "functools"]
include=[
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
Sphinx = "^4.0.2"
black = "*"
blacken-docs = "^*"
pretty-timeit = "^0.1.0"
sphinx-rtd-theme = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
